# SGRenderPlayground

./: .gitignore  CMakeLists.txt  GettingStartedwithCSharpP2.code-workspace  README.md  make.bat
Prototypes/: CMakeLists.txt  prototypes.cmake
Prototypes/01-GoochHighlighted/: makefile  uniforms.sh  varying.def.sc  vs_goochhighlighted.sc
Prototypes/02-Lights-Basic/: fs_lightsbasic.sc  lightsbasic.cpp  uniforms.sh  varying.def.sc  vs_lightsbasic.sc
Prototypes/common/: common.sh
Prototypes/runtime/shaders/dx11/: fs_goochhighlighted.bin.disasm  fs_goochhighlighted.bin.hlsl  fs_lightsbasic.bin.disasm  fs_lightsbasic.bin.hlsl  vs_lightsbasic.bin.disasm  vs_lightsbasic.bin.hlsl
src/: prototypes.cmake
src/01-GoochHighlighted/: fs_goochhighlighted.sc  goochhighlighted.cpp
src/runtime/shaders/dx11/: fs_goochhighlighted.bin.disasm  fs_goochhighlighted.bin.hlsl  vs_goochhighlighted.bin.disasm  vs_goochhighlighted.bin.hlsl
